--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Grace Community Church - Welcome</title>
+    <title>CCC Glory of Latter Days Parish, Edinburgh - Welcome</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
     <style>
@@ -157,7 +157,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark">
         <div class="container">
             <a class="navbar-brand" href="#home">
-                <i class="fas fa-church me-2"></i>Grace Community Church
+                <i class="fas fa-church me-2"></i>CCC Glory of Latter Days Parish
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
@@ -180,7 +180,7 @@
     <section id="home" class="hero-section">
         <div class="container">
             <div class="hero-content">
-                <h1>Welcome to Grace Community Church</h1>
+                <h1>Welcome to CCC Gold Parish</h1>
                 <p>A place where faith, family, and community come together</p>
                 <div>
                     <a href="#services" class="btn btn-custom btn-lg me-3">Join Our Service</a>
