--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         
         .hero-section {
             background: linear-gradient(rgba(44, 62, 80, 0.8), rgba(52, 152, 219, 0.8)), 
-                        url('https://images.unsplash.com/photo-1438032005730-c779502df39b?ixlib=rb-4.0.3&auto=format&fit=crop&w=1200&q=80') center/cover;
+                        url('images/homepage/hero/celestial-church-of-christ-logo-png-5.png') center/cover;
             height: 70vh;
             display: flex;
             align-items: center;
