--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                     <li class="nav-item"><a class="nav-link" href="sermons.html">Sermons</a></li>
                     <li class="nav-item"><a class="nav-link" href="events.html">Events</a></li>
                     <li class="nav-item"><a class="nav-link" href="#ministries">Ministries</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+                    <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
                 </ul>
             </div>
         </div>
@@ -180,7 +180,7 @@
     <section id="home" class="hero-section">
         <div class="container">
             <div class="hero-content">
-                <h1>Welcome to CCC Gold Parish</h1>
+                <h1>Welcome to Gold Parish</h1>
                 <p>A place where faith, family, and community come together</p>
                 <div>
                     <a href="#services" class="btn btn-custom btn-lg me-3">Join Our Service</a>
@@ -200,7 +200,7 @@
             <div class="row align-items-center">
                 <div class="col-lg-6">
                     <h3>Our Mission</h3>
-                    <p>To make disciples of Jesus Christ who worship passionately, love unconditionally, and serve sacrificially.</p>
+                    <p> To bring people back to Christ and save lost soul by bring hope from God to the hopeless.</p>
                     <h3>Our Vision</h3>
                     <p>To be a church that transforms lives and communities through the love and grace of Jesus Christ.</p>
                     <h3>Our Values</h3>
@@ -236,18 +236,28 @@
                             <i class="fas fa-sun"></i>
                         </div>
                         <h4>Sunday Morning</h4>
-                        <p><strong>9:00 AM</strong></p>
-                        <p>Traditional Worship Service with choir and organ</p>
+                        <p><strong>10:00 AM</strong></p>
+                        <p>Glorious Sunday service where true worship is observed</p>
                     </div>
+                 </div>
+                <div class="col-md-4">
+                    <div class="service-card">
+                        <div class="service-icon">
+                            <i class="fas fa-music"></i>
+                        </div>
+                        <h4>Monday</h4>
+                        <p><strong>19:00 - 20:00</strong></p>
+                        <p>Bible study (online)</p>
+                    </div>    
                 </div>
                 <div class="col-md-4">
                     <div class="service-card">
                         <div class="service-icon">
                             <i class="fas fa-music"></i>
                         </div>
-                        <h4>Sunday Contemporary</h4>
-                        <p><strong>11:00 AM</strong></p>
-                        <p>Modern worship with contemporary music and multimedia</p>
+                        <h4>Wednesday</h4>
+                        <p><strong>00:00 - 01:00</strong></p>
+                        <p>Night vigil conference call prayer</p>
                     </div>
                 </div>
                 <div class="col-md-4">
@@ -256,8 +266,18 @@
                             <i class="fas fa-moon"></i>
                         </div>
                         <h4>Wednesday Evening</h4>
-                        <p><strong>7:00 PM</strong></p>
-                        <p>Bible study and prayer meeting for all ages</p>
+                        <p><strong>18:00 - 19:00</strong></p>
+                        <p>Mercy day service</p>
+                    </div>
+                </div>    
+                <div class="col-md-4">
+                    <div class="service-card">
+                        <div class="service-icon">
+                            <i class="fas fa-music"></i>
+                        </div>
+                        <h4>Friday Evening</h4>
+                        <p><strong>18:00 - 19:00</strong></p>
+                        <p>Power day service</p>
                     </div>
                 </div>
             </div>
@@ -272,29 +292,34 @@
                 <p class="lead">Listen to our recent messages and grow in your faith</p>
             </div>
             <div class="row">
-                <div class="col-md-4 mb-4">
-                    <div class="sermon-card">
-                        <div class="sermon-image">
-                            <i class="fas fa-play-circle"></i>
-                        </div>
-                        <div class="p-3">
-                            <h5>Walking in Faith</h5>
-                            <p class="text-muted">Pastor John Smith • Nov 3, 2025</p>
-                            <p>Discovering how to trust God in uncertain times and walk boldly in faith.</p>
-                            <button class="btn btn-custom">Listen Now</button>
-                        </div>
+            <div class="col-md-4 mb-4">
+                <div class="sermon-card">
+                    <div class="sermon-image" style="background: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url('images/sermons/instagram-reel-preview.jpg') center/cover; height: 200px; display: flex; align-items: center; justify-content: center;">
+                        <i class="fab fa-instagram text-white" style="font-size: 3rem;"></i>
                     </div>
+                    <div class="p-3">
+                        <h5>Walking in Faith</h5>
+                        <p class="text-muted">Evang Aregbesola Oluwatosin • Nov 3, 2025</p>
+                        <p>Discovering how to trust God in uncertain times and walk boldly in faith.</p>
+                        <a href="https://www.instagram.com/reel/DQkLKbVDMrb/" target="_blank" class="btn btn-custom">
+                            <i class="fab fa-instagram"></i>Listen Now</button>
+                        </a>
+                    </div>
+                </div>
+            </div>    
                 </div>
                 <div class="col-md-4 mb-4">
                     <div class="sermon-card">
-                        <div class="sermon-image">
-                            <i class="fas fa-play-circle"></i>
+                        <div class="sermon-image"style="background: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url('images/sermons/instagram-reel-preview.jpg') center/cover; height: 200px; display: flex; align-items: center; justify-content: center;">
+                        <i class="fab fa-instagram text-white" style="font-size: 3rem;"></i>
                         </div>
                         <div class="p-3">
                             <h5>Love Without Limits</h5>
                             <p class="text-muted">Pastor Sarah Johnson • Oct 27, 2025</p>
                             <p>Understanding God's unconditional love and how to share it with others.</p>
-                            <button class="btn btn-custom">Listen Now</button>
+                            <a href="https://www.instagram.com/reel/DQR7erjDM7f/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA=="
+                                <i class="fab fa-instagram">Listen Now</button>
+                            </a>    
                         </div>
                     </div>
                 </div>
