--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
         </div>
         <div class="p-3">
             <h5>Walking in Faith</h5>
-            <p class="text-muted">Pastor John Smith • Nov 3, 2025</p>
+            <p class="text-muted">Evang Aregbesola Oluwatosin • Nov 3, 2025</p>
             <p><small>Hover for preview • Click for full reel</small></p>
             <button class="btn btn-custom">Listen to Audio</button>
         </div>
