--- a/shepherd-message.html
+++ b/shepherd-message.html
@@ -132,14 +132,14 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-lg-4 text-center mb-4">
-                    <img src="images/shepherd/shepherd.jpg" alt="Our Shepherd" class="shepherd-image">
+                    <img src="images/shepherd/552536937_18020598341767677_1635012849189181096_n.jpg" alt="Our Shepherd" class="shepherd-image">
                 </div>
                 <div class="col-lg-8">
-                    <h2 class="mb-4">Pastor [Shepherd's Name]</h2>
-                    <h5 class="text-muted mb-3">Senior Pastor & Spiritual Leader</h5>
+                    <h2 class="mb-4">M/S/S/Evang. Anthony Thomas</h2>
+                    <h5 class="text-muted mb-3">Shepherd-In-Charge & Spiritual Leader</h5>
                     <p class="lead">
                         Welcome to our church family. I am honored to serve as your shepherd and guide you 
-                        on this beautiful journey of faith. For over [X] years, I have been blessed to 
+                        on this beautiful journey of faith. For over 10 years, I have been blessed to 
                         minister to this wonderful community here in Edinburgh.
                     </p>
                     <p>
@@ -217,8 +217,8 @@
                 <p class="mt-4">
                     <em>
                         In Christian Love and Service,<br>
-                        Pastor [Shepherd's Name]<br>
-                        Senior Pastor, CCC Glory of Latter Days Parish
+                        M/S/S/Evang. Anthony Thomas]<br>
+                        Shepherd-In-Charge, CCC Glory of Latter Days Parish
                     </em>
                 </p>
             </div>
@@ -241,7 +241,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 mx-auto text-center">
-                    <h3 class="mb-4">Connect with Pastor [Shepherd's Name]</h3>
+                    <h3 class="mb-4">Connect with M/S/S/Evang Anthony Thomas]</h3>
                     <p class="lead mb-4">
                         Have a prayer request, need spiritual guidance, or want to schedule a meeting? 
                         Don't hesitate to reach out.
@@ -250,12 +250,12 @@
                         <div class="col-md-4 mb-3">
                             <i class="fas fa-phone fa-2x mb-3"></i>
                             <h6>Call</h6>
-                            <p>(555) 123-PRAY</p>
+                            <p>(+44)7474361251</p>
                         </div>
                         <div class="col-md-4 mb-3">
                             <i class="fas fa-envelope fa-2x mb-3"></i>
                             <h6>Email</h6>
-                            <p>pastor@cccgloryparish.org</p>
+                            <p>info@cccgloryparish.org</p>
                         </div>
                         <div class="col-md-4 mb-3">
                             <i class="fas fa-calendar fa-2x mb-3"></i>
