--- a/gallery.html
+++ b/gallery.html
@@ -157,139 +157,139 @@
                 <h3 class="category-title">Sunday Service Moments</h3>
                 <div class="row">
                     <div class="col-md-4 gallery-item" data-category="sunday-service">
-                        <a href="images/sundayservice/img1.jpg" data-lightbox="gallery" data-title="Sunday Worship Service">
-                            <img src="images/sundayservice/img1.jpg" alt="Sunday Service 1" class="gallery-image">
+                        <a href="images/sundayservice/551932257_18020598362767677_7612704916317753514_n.jpg" data-lightbox="gallery" data-title="Sunday Worship Service">
+                            <img src="images/sundayservice/551932257_18020598362767677_7612704916317753514_n.jpg" alt="Sunday Service 1" class="gallery-image">
                         </a>
                     </div>
                     <div class="col-md-4 gallery-item" data-category="sunday-service">
-                        <a href="images/sundayservice/img2.jpg" data-lightbox="gallery" data-title="Congregation in Prayer">
-                            <img src="images/sundayservice/img2.jpg" alt="Sunday Service 2" class="gallery-image">
+                        <a href="images/sundayservice/553255245_18020598371767677_2767495010855152047_n.jpg" data-lightbox="gallery" data-title="Congregation in Prayer">
+                            <img src="images/sundayservice/553255245_18020598371767677_2767495010855152047_n.jpg" alt="Sunday Service 2" class="gallery-image">
                         </a>
                     </div>
                     <div class="col-md-4 gallery-item" data-category="sunday-service">
-                        <a href="images/sundayservice/img3.jpg" data-lightbox="gallery" data-title="Praise and Worship">
-                            <img src="images/sundayservice/img3.jpg" alt="Sunday Service 3" class="gallery-image">
+                        <a href="images/sundayservice/567557498_18024049064767677_8412166022856581675_n.jpg" data-lightbox="gallery" data-title="Praise and Worship">
+                            <img src="images/sundayservice/567557498_18024049064767677_8412166022856581675_n.jpg" alt="Sunday Service 3" class="gallery-image">
                         </a>
                     </div>
                     <div class="col-md-4 gallery-item" data-category="sunday-service">
-                        <a href="images/sundayservice/img4.jpg" data-lightbox="gallery" data-title="Fellowship Time">
-                            <img src="images/sundayservice/img4.jpg" alt="Sunday Service 4" class="gallery-image">
+                        <a href="images/sundayservice/567594698_18024049067767677_1754461535241469067_n.jpg" data-lightbox="gallery" data-title="Fellowship Time">
+                            <img src="images/sundayservice/567594698_18024049067767677_1754461535241469067_n.jpg" alt="Sunday Service 4" class="gallery-image">
                         </a>
                     </div>
                     <div class="col-md-4 gallery-item" data-category="sunday-service">
-                        <a href="images/sundayservice/img5.jpg" data-lightbox="gallery" data-title="Reading God's Word">
-                            <img src="images/sundayservice/img5.jpg" alt="Sunday Service 5" class="gallery-image">
+                        <a href="images/sundayservice/568066815_18024049031767677_369348958419096713_n.jpg" data-lightbox="gallery" data-title="Reading God's Word">
+                            <img src="images/sundayservice/568066815_18024049031767677_369348958419096713_n.jpg" alt="Sunday Service 5" class="gallery-image">
                         </a>
                     </div>
                     <div class="col-md-4 gallery-item" data-category="sunday-service">
-                        <a href="images/sundayservice/img6.jpg" data-lightbox="gallery" data-title="Community Gathering">
-                            <img src="images/sundayservice/img6.jpg" alt="Sunday Service 6" class="gallery-image">
+                        <a href="images/sundayservice/568417210_18024049040767677_6433053786388239485_n.jpg" data-lightbox="gallery" data-title="Community Gathering">
+                            <img src="images/sundayservice/568417210_18024049040767677_6433053786388239485_n.jpg" alt="Sunday Service 6" class="gallery-image">
                         </a>
                     </div>
                     <div class="col-md-4 gallery-item" data-category="sunday-service">
-                        <a href="images/sundayservice/img7.jpg" data-lightbox="gallery" data-title="Baptism Service">
-                            <img src="images/sundayservice/img7.jpg" alt="Sunday Service 7" class="gallery-image">
+                        <a href="images/sundayservice/568522268_18024049049767677_4417647195692973832_n.jpg" data-lightbox="gallery" data-title="Baptism Service">
+                            <img src="images/sundayservice/568522268_18024049049767677_4417647195692973832_n.jpg" alt="Sunday Service 7" class="gallery-image">
                         </a>
                     </div>
                     <div class="col-md-4 gallery-item" data-category="sunday-service">
-                        <a href="images/sundayservice/img8.jpg" alt="Sunday Service 8" data-lightbox="gallery" data-title="Church Choir">
-                            <img src="images/sundayservice/img8.jpg" class="gallery-image">
+                        <a href="images/sundayservice/570061882_18024780656767677_3062912854519463009_n.jpg" alt="Sunday Service 8" data-lightbox="gallery" data-title="Church Choir">
+                            <img src="images/sundayservice/570061882_18024780656767677_3062912854519463009_n.jpg" class="gallery-image">
                         </a>
                     </div>
                     <div class="col-md-4 gallery-item" data-category="sunday-service">
-                        <a href="images/sundayservice/img9.jpg" data-lightbox="gallery" data-title="Youth Ministry">
-                            <img src="images/sundayservice/img9.jpg" alt="Sunday Service 9" class="gallery-image">
+                        <a href="images/sundayservice/570657000_18024780752767677_9216095359031970418_n.jpg" data-lightbox="gallery" data-title="Youth Ministry">
+                            <img src="images/sundayservice/570657000_18024780752767677_9216095359031970418_n.jpg" alt="Sunday Service 9" class="gallery-image">
                         </a>
                     </div>
                     <div class="col-md-4 gallery-item" data-category="sunday-service">
-                        <a href="images/sundayservice/img10.jpg" data-lightbox="gallery" data-title="Prayer Circle">
-                            <img src="images/sundayservice/img10.jpg" alt="Sunday Service 10" class="gallery-image">
+                        <a href="images/sundayservice/570958018_18024780713767677_555275128578740494_n.jpg" data-lightbox="gallery" data-title="Prayer Circle">
+                            <img src="images/sundayservice/570958018_18024780713767677_555275128578740494_n.jpg" alt="Sunday Service 10" class="gallery-image">
                         </a>
                     </div>
                     <!-- Add more Sunday service images as needed -->
                     <div class="col-md-4 gallery-item" data-category="sunday-service">
-                        <a href="images/sundayservice/img11.jpg" data-lightbox="gallery" data-title="Sunday Service">
-                            <img src="images/sundayservice/img11.jpg" alt="Sunday Service 11" class="gallery-image">
+                        <a href="images/sundayservice/573848543_18024776264767677_6196713483142978308_n.jpg" data-lightbox="gallery" data-title="Sunday Service">
+                            <img src="images/sundayservice/573848543_18024776264767677_6196713483142978308_n.jpg" alt="Sunday Service 11" class="gallery-image">
                         </a>
                     </div>
                     <div class="col-md-4 gallery-item" data-category="sunday-service">
-                        <a href="images/sundayservice/img12.jpg" data-lightbox="gallery" data-title="Sunday Service">
-                            <img src="images/sundayservice/img12.jpg" alt="Sunday Service 12" class="gallery-image">
+                        <a href="images/sundayservice/572949917_18024776273767677_548493228998090408_n.jpg" data-lightbox="gallery" data-title="Sunday Service">
+                            <img src="images/sundayservice/572949917_18024776273767677_548493228998090408_n.jpg" alt="Sunday Service 12" class="gallery-image">
                         </a>
                     </div>
                     <div class="col-md-4 gallery-item" data-category="sunday-service">
-                        <a href="images/sundayservice/img13.jpg" data-lightbox="gallery" data-title="Sunday Service">
-                            <img src="images/sundayservice/img13.jpg" alt="Sunday Service 13" class="gallery-image">
+                        <a href="images/sundayservice/572487538_18024776309767677_3940985337481867263_n.jpg" data-lightbox="gallery" data-title="Sunday Service">
+                            <img src="images/sundayservice/572487538_18024776309767677_3940985337481867263_n.jpg" alt="Sunday Service 13" class="gallery-image">
                         </a>
                     </div>
                     <div class="col-md-4 gallery-item" data-category="sunday-service">
-                        <a href="images/sundayservice/img14.jpg" data-lightbox="gallery" data-title="Sunday Service">
-                            <img src="images/sundayservice/img14.jpg" alt="Sunday Service 14" class="gallery-image">
+                        <a href="images/sundayservice/572224019_18024776291767677_7270348946802538655_n.jpg" data-lightbox="gallery" data-title="Sunday Service">
+                            <img src="images/sundayservice/572224019_18024776291767677_7270348946802538655_n.jpg" alt="Sunday Service 14" class="gallery-image">
                         </a>
                     </div>
                     <div class="col-md-4 gallery-item" data-category="sunday-service">
-                        <a href="images/sundayservice/img15.jpg" data-lightbox="gallery" data-title="Sunday Service">
-                            <img src="images/sundayservice/img15.jpg" alt="Sunday Service 15" class="gallery-image">
+                        <a href="images/sundayservice/572170541_18024780677767677_4800253432591552041_n.jpg" data-lightbox="gallery" data-title="Sunday Service">
+                            <img src="images/sundayservice/572170541_18024780677767677_4800253432591552041_n.jpg" alt="Sunday Service 15" class="gallery-image">
                         </a>
                     </div>
                     <div class="col-md-4 gallery-item" data-category="sunday-service">
-                        <a href="images/sundayservice/img16.jpg" data-lightbox="gallery" data-title="Sunday Service">
-                            <img src="images/sundayservice/img16.jpg" alt="Sunday Service 16" class="gallery-image">
+                        <a href="images/sundayservice/572139124_18024776282767677_59582648455838978_n.jpg" data-lightbox="gallery" data-title="Sunday Service">
+                            <img src="images/sundayservice/572139124_18024776282767677_59582648455838978_n.jpg" alt="Sunday Service 16" class="gallery-image">
                         </a>
                     </div>
                     <div class="col-md-4 gallery-item" data-category="sunday-service">
-                        <a href="images/sundayservice/img17.jpg" data-lightbox="gallery" data-title="Sunday Service">
-                            <img src="images/sundayservice/img17.jpg" alt="Sunday Service 17" class="gallery-image">
+                        <a href="images/sundayservice/572127338_18024780635767677_3537506467871859890_n.jpg" data-lightbox="gallery" data-title="Sunday Service">
+                            <img src="images/sundayservice/572127338_18024780635767677_3537506467871859890_n.jpg" alt="Sunday Service 17" class="gallery-image">
                         </a>
                     </div>
                     <div class="col-md-4 gallery-item" data-category="sunday-service">
-                        <a href="images/sundayservice/img18.jpg" data-lightbox="gallery" data-title="Sunday Service">
-                            <img src="images/sundayservice/img18.jpg" alt="Sunday Service 18" class="gallery-image">
+                        <a href="images/sundayservice/571874320_18024780743767677_2963382691209043586_n.jpg" data-lightbox="gallery" data-title="Sunday Service">
+                            <img src="images/sundayservice/571874320_18024780743767677_2963382691209043586_n.jpg" alt="Sunday Service 18" class="gallery-image">
                         </a>
                     </div>
                     <div class="col-md-4 gallery-item" data-category="sunday-service">
-                        <a href="images/sundayservice/img19.jpg" data-lightbox="gallery" data-title="Sunday Service">
-                            <img src="images/sundayservice/img19.jpg" alt="Sunday Service 19" class="gallery-image">
+                        <a href="images/sundayservice/571845808_18024780704767677_199978323189454607_n.jpg" data-lightbox="gallery" data-title="Sunday Service">
+                            <img src="images/sundayservice/571845808_18024780704767677_199978323189454607_n.jpg" alt="Sunday Service 19" class="gallery-image">
                         </a>
                     </div>
                     <div class="col-md-4 gallery-item" data-category="sunday-service">
-                        <a href="images/sundayservice/img20.jpg" data-lightbox="gallery" data-title="Sunday Service">
-                            <img src="images/sundayservice/img20.jpg" alt="Sunday Service 20" class="gallery-image">
+                        <a href="images/sundayservice/571791099_18024780734767677_6121700118273484402_n.jpg" data-lightbox="gallery" data-title="Sunday Service">
+                            <img src="images/sundayservice/571791099_18024780734767677_6121700118273484402_n.jpg" alt="Sunday Service 20" class="gallery-image">
                         </a>
                     </div>
                     <div class="col-md-4 gallery-item" data-category="sunday-service">
-                        <a href="images/sundayservice/img21.jpg" data-lightbox="gallery" data-title="Sunday Service">
-                            <img src="images/sundayservice/img21.jpg" alt="Sunday Service 21" class="gallery-image">
+                        <a href="images/sundayservice/571734829_18024776318767677_7769222801146839705_n.jpg" data-lightbox="gallery" data-title="Sunday Service">
+                            <img src="images/sundayservice/571734829_18024776318767677_7769222801146839705_n.jpg" alt="Sunday Service 21" class="gallery-image">
                         </a>
                     </div>
                     <div class="col-md-4 gallery-item" data-category="sunday-service">
-                        <a href="images/sundayservice/img22.jpg" data-lightbox="gallery" data-title="Sunday Service">
-                            <img src="images/sundayservice/img22.jpg" alt="Sunday Service 22" class="gallery-image">
+                        <a href="images/sundayservice/571476130_18024780647767677_3113423805196342931_n.jpg" data-lightbox="gallery" data-title="Sunday Service">
+                            <img src="images/sundayservice/571476130_18024780647767677_3113423805196342931_n.jpg" alt="Sunday Service 22" class="gallery-image">
                         </a>
                     </div>
                     <div class="col-md-4 gallery-item" data-category="sunday-service">
-                        <a href="images/sundayservice/img23.jpg" data-lightbox="gallery" data-title="Sunday Service">
-                            <img src="images/sundayservice/img23.jpg" alt="Sunday Service 23" class="gallery-image">
+                        <a href="images/sundayservice/571354062_18024780722767677_3639600275455826088_n.jpg" data-lightbox="gallery" data-title="Sunday Service">
+                            <img src="images/sundayservice/571354062_18024780722767677_3639600275455826088_n.jpg" alt="Sunday Service 23" class="gallery-image">
                         </a>
                     </div>
                     <div class="col-md-4 gallery-item" data-category="sunday-service">
-                        <a href="images/sundayservice/img24.jpg" data-lightbox="gallery" data-title="Sunday Service">
-                            <img src="images/sundayservice/img24.jpg" alt="Sunday Service 24" class="gallery-image">
+                        <a href="images/sundayservice/571204241_18024776300767677_140739155192041776_n.jpgg" data-lightbox="gallery" data-title="Sunday Service">
+                            <img src="images/sundayservice/571204241_18024776300767677_140739155192041776_n.jpg" alt="Sunday Service 24" class="gallery-image">
                         </a>
                     </div>
                     <div class="col-md-4 gallery-item" data-category="sunday-service">
-                        <a href="images/sundayservice/img25.jpg" data-lightbox="gallery" data-title="Sunday Service">
-                            <img src="images/sundayservice/img25.jpg" alt="Sunday Service 25" class="gallery-image">
+                        <a href="images/sundayservice/571127922_18024780695767677_1771569653330298709_n.jpg" data-lightbox="gallery" data-title="Sunday Service">
+                            <img src="images/sundayservice/571127922_18024780695767677_1771569653330298709_n.jpg" alt="Sunday Service 25" class="gallery-image">
                         </a>
                     </div>
                     <div class="col-md-4 gallery-item" data-category="sunday-service">
-                        <a href="images/sundayservice/img26.jpg" data-lightbox="gallery" data-title="Sunday Service">
-                            <img src="images/sundayservice/img26.jpg" alt="Sunday Service 26" class="gallery-image">
+                        <a href="images/sundayservice/571016666_18024780686767677_7408787550542328550_n.jpg" data-lightbox="gallery" data-title="Sunday Service">
+                            <img src="images/sundayservice/571016666_18024780686767677_7408787550542328550_n.jpg" alt="Sunday Service 26" class="gallery-image">
                         </a>
                     </div>
                     <div class="col-md-4 gallery-item" data-category="sunday-service">
-                        <a href="images/sundayservice/img27.jpg" data-lightbox="gallery" data-title="Sunday Service">
-                            <img src="images/sundayservice/img27.jpg" alt="Sunday Service 27" class="gallery-image">
+                        <a href="images/sundayservice/571005676_18024780668767677_6167855226119291390_n.jpg" data-lightbox="gallery" data-title="Sunday Service">
+                            <img src="images/sundayservice/571005676_18024780668767677_6167855226119291390_n.jpg" alt="Sunday Service 27" class="gallery-image">
                         </a>
                     </div>
                 </div>
