--- a/index.html
+++ b/index.html
@@ -658,29 +658,20 @@
             <div class="row">
                 <div class="col-lg-6 mb-4">
                     <!-- Event with Video Preview -->
+               <div class="col-lg-6 mb-4">
+                    <!-- Event with Image -->
                     <div class="event-item">
-                       <video class="w-100 h-100" 
-                                   style="object-fit: cover;" 
-                                   muted>
-                                <source src="https://github.com/Ijomimo/celechurch/blob/main/images/events/AQPeKFQsj0ARM9yBRsMiWQqsZI7zn7w9PxuR-4T7pKHNX_zSFwXK_4eIGoR6EIETcXzM7biN4eIkrMAw6PjPhpYTECA7OHwwYdGy-h8.mp4" type="video/mp4">
-                                <div style="color: white; text-align: center; padding-top: 80px;">Video not supported</div>
-                            </video>
-                            
-                            <!-- Play button overlay -->
-                            <div class="play-overlay position-absolute top-50 start-50 translate-middle" style="pointer-events: none;">
-                                <div class="play-btn" style="width: 60px; height: 60px; background: rgba(255,255,255,0.9); border-radius: 50%; display: flex; align-items: center; justify-content: center; transition: transform 0.3s ease;">
-                                    <i class="fas fa-play text-primary" style="font-size: 20px; margin-left: 3px;"></i>
-                                </div>
-                            </div>
+                        <div class="event-media mb-3">
+                            <img class="event-image" src="teens/podcast1_2.jpg" alt="Christmas Carol Service">
                         </div>
                         <div class="d-flex justify-content-between align-items-start">
                             <div>
-                                <h5>Community Thanksgiving Dinner</h5>
-                                <p><i class="fas fa-calendar me-2"></i>November 23, 2025</p>
-                                <p><i class="fas fa-clock me-2"></i>6:00 PM - 8:00 PM</p>
-                                <p>Join us for a special Thanksgiving dinner open to the entire community. Free meal for all!</p>
+                                <h5>Teens podcast</h5>
+                                <p><i class="fas fa-calendar me-2"></i>December 15, 2025</p>
+                                <p><i class="fas fa-clock me-2"></i>7:00 PM - 8:30 PM</p>
+                                <p>Rediscovering purpose for a secure future</p>
                             </div>
-                            <span class="badge bg-primary">Free</span>
+                            <span class="badge bg-success">Teens</span>
                         </div>
                     </div>
                 </div>
